--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .coverage
+.coveragerc
 .coverage.*
 .cache
 nosetests.xml
@@ -113,3 +114,6 @@ venv.bak/
 
 # pytest cache
 .pytest_cache/
+
+# coverage html report
+coverage_html_report
